2018-08-06 kirotawa <kirotawa@users.sourceforge.net>
	* dos2unix.c, unix2dos.c: Fixed a minor memory leak.
	  See https://sourceforge.net/p/dos2unix/bugs/17/

2018-07-21 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Fix: Add RPM_LD_FLAGS instead of RPM_OPT_FLAGS to LDFLAGS.

2017-10-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.4.0

2017-09-24 Sebastian Rasmussen
	* Fixed typos in code and documentation.

2017-09-11 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: When --allow-chown is used put the same read/write
	  permissions as in new file mode.
	* man/man1/dos2unix.pod: Updated.

2017-09-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V shows if dos2unix has support for preserving
	  the user and group ownership of files.
	* common.c: New option --allow-chown to allow file ownership change
	  in old file mode. Option --no-allow-chown does the opposite.
	  Thanks to RedHat bug: 1483633 - Add option to force in-place conversion
	  even if ownership cannot be preserved
	  https://bugzilla.redhat.com/show_bug.cgi?id=1483633

2017-08-05 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Build all text and html manual files when ENABLE_NLS=1.
	* Makefile: Removed unneeded tabs.

2017-07-29 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Code cleanup.

2017-07-08 Erwin Waterlander <waterlan@xs4all.nl>
	* test/Makefile: Fix setting C.UTF-8 environment (when available).

2017-07-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.3.5
	* Makefile: Compile with -O0 when DEBUG=1.

2017-06-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: New flag 0 for option -i, --info. End information lines with
	  a null character instead of a newline character, enabling correct file
	  name interpretation when flag c is used.
	* common.c: Don't print leading spaces when option -i with flag c is used.

2017-05-18 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Improved example for recursive conversion.